# liblinalg

./: .gitignore  CMakeLists.txt  Matrix.h  Matrix.tpp  main.cpp
include/: Matrix.h
src/: Matrix.cpp
